src/*Python*
Python 3.12.6 (main, Sep  8 2024, 13:18:56) [GCC 14.2.1 20240805] on linux
Type "help", "copyright", "credits" or "license" for more information.
>>> var = 5 + 2 == 7
>>> var
True
>>> var2 = var
>>> var2
True
>>> var3 = not var2
>>> vat4 = not 4 + 2
>>> vat4
False
>>> vat4 = not 3.14 - 21.3
>>> vat4
False
>>> vat4 = (not 3.14 - 21.3) == False
>>> vat4
True
>>> if 3.15 - 21.3:
... print("Thi is so fucked up")
  File "<stdin>", line 2
    print("Thi is so fucked up")
    ^
IndentationError: expected an indented block after 'if' statement on line 1
>>> if 3.15 - 21.3:
...     print("This is so fucked up")
... 
This is so fucked up
>>> vat4 = 3.15 == 53.12 == 10.2
>>> vat4
False
>>> vat4 = 3.15 == 3.15 == 3.15
>>> vat4
True
>>> if None:
...     print("Fucked up")
... 
>>> if 10:
...     print("fucked up")
... 
fucked up
>>> vat4 = 1 < 2 < 3 < 4 < 5
>>> vat4
True
>>> vat4 = 1 < 2 > 1
>>> vat4
True
>>> vat4 = not False == True
>>> vat4
True
>>> vat4 = not True == True
>>> vat4
False
>>> vat4 = not True == False
>>> vat5
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'vat5' is not defined. Did you mean: 'vat4'?
>>> vat4
True
>>> vat4 = not True != False
>>> vat4
False
>>> vat4 = not (True != False)
>>> vat4
False
>>> vat4 = (not True) != False
>>> vat4
False
>>> 